# GetYuhRates

./: .gitignore  CLAUDE.md  README.md
getyuhrates_cli/: .env.example  CLAUDE.md  CLAUDE_CHANGES.md  README.md  config.yaml.example  main.py  pyproject.toml
getyuhrates_cli/.claude/agents/: cli-builder-typer.md
getyuhrates_cli/getyuhratescli/: __init__.py  commands.py  config.py  rate_limiter.py
getyuhrates_package/: CLAUDE.md  CLAUDE_CHANGES.md  README.md  pyproject.toml
getyuhrates_package/.claude/agents/: python-package-architect.md
getyuhrates_package/src/getyuhrates/: __init__.py  csv_writer.py  currencyresult.py  getyuhrates.py  writer.py
getyuhrates_package/tests/: __init__.py  test_currencyresult.py
getyuhrates_web/: .env.example  CLAUDE.md  README.md  config.yaml.example  main.py  pyproject.toml
getyuhrates_web/.claude/agents/: fastapi-ui-builder.md
getyuhrates_web/app/: __init__.py  config.py  main.py
getyuhrates_web/app/models/: __init__.py  requests.py  responses.py
getyuhrates_web/app/routes/: __init__.py  config.py  home.py  rates.py  reports.py
getyuhrates_web/app/templates/: base.html  config.html  index.html  rates.html  reports.html
