[project]
name = "getyuhrates"
version = "0.1.0"
description = "A Python package for retrieving currency exchange rates from the CurrencyLayer API with support for multiple source currencies and flexible output formats"
readme = "README.md"
authors = [
    { name = "IsaiahSama", email = "isaiahcarrington46@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
